# LunaboticsBerm

./: .gitignore  .gitmodules  CHEATSHEET  README.md
src/: README.md
src/G2SI/: package.xml  setup.cfg  setup.py
src/G2SI/G2SI/: g2si_node.py
src/bird_bringup/: CMakeLists.txt  package.xml
src/bird_bringup/config/: MID360_config.json  display_point_cloud_ROS2.rviz  occupancy.rviz  slam.rviz
src/bird_bringup/launch/: bird_bringup_launch.py  ground_rviz_launch.py  laserscan_launch.py  msg_MID360_launch.py  occupancy.launch.py  rviz.launch.py
src/bird_bringup/params/: ekf.yaml  madgwick_lidar.yaml  slam.yaml
src/bird_bringup/rviz/: plum_pudding.rviz
src/bird_description/: package.xml  setup.cfg  setup.py
src/bird_description/launch/: display.launch.py
src/bird_description/rviz/: view_description.rviz
src/bird_description/urdf/: bird.urdf.xml
src/bird_drivetrain/: CMakeLists.txt  bird_drivetrain.code-workspace  package.xml
src/bird_drivetrain/bird_drivetrain_mcu/: platformio.ini
src/bird_drivetrain/bird_drivetrain_mcu/include/: mcvc_cmds.h  robot_characteristics.h
src/bird_drivetrain/bird_drivetrain_mcu/src/: drive.cpp  drive.h  main.cpp  mcvc_cmds.cpp
src/bird_drivetrain/src/: clearcore_driver_node.cpp  linac_driver_node.cpp
src/bird_excavation/: CMakeLists.txt  README.md  bird_excavation.code-workspace  package.xml
src/bird_excavation/bird_excavation_mcu/: platformio.ini
src/bird_excavation/bird_excavation_mcu/src/: main.cpp
src/bird_excavation/ref/: linac_node
src/bird_excavation/src/: linac_driver_node.cpp
src/bird_interfaces/: CMakeLists.txt  package.xml
src/bird_interfaces/srv/: BucketPos.srv  ChangeState.srv
src/bird_navigation/: CMakeLists.txt  package.xml
src/bird_navigation/scripts/: g2si_node.py
src/bird_navigation/src/: g2si_node.cpp  mercator_node.cpp  pcl_crop_node.cpp
src/bird_state_machine/: package.xml  setup.cfg  setup.py
src/bird_state_machine/bird_state_machine/: setup_state.py  standby_state.py  state.py  state_machine.py
src/bird_teleop/: CMakeLists.txt  package.xml
src/bird_teleop/launch/: bird_controller_launch.xml
src/bird_teleop/scripts/: bird_controller.py  teleop_twist_keyboard.py
src/bird_teleop/src/: bird_joy2cmd_node.cpp
src/excavation_system/: CMakeLists.txt  package.xml
src/excavation_system/src/: excavation_system_manager.cpp
src/g2si/: package.xml  setup.cfg  setup.py
src/g2si/g2si/: g2si_node.py
src/task_manager_system/: CMakeLists.txt  package.xml
src/task_manager_system/msg/: robot_state_change.msg
src/task_manager_system/src/: State.cpp  robot_state.h
src/task_manager_system/src/state_machine/: robot_state.h  robot_state_machine.cpp  robot_state_machine.h  setup_state.cpp  setup_state.h  standby_state.cpp  standby_state.h  state_machine_node.cpp
src/teleop_input/: setup.py
src/teleop_input/launch/: bird_controller_launch.xml
src/teleop_input/teleop_input/: bird_controller.py  collin_scheme.py
